--- a/.github/workflows/app-frontend-lighthouse-ci.yml
+++ b/.github/workflows/app-frontend-lighthouse-ci.yml
@@ -86,6 +86,7 @@ jobs:
         id: lighthouse-ci
         working-directory: src/App/frontend
         run: |
+          set -e # exit on any failure
           yarn run lhci > lighthouse_output.txt 2>&1
           cat lighthouse_output.txt
 
