test: consolidate lint-staged config to root

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
       "yarn --cwd src/App/frontend eslint --cache --fix"
     ],
     "src/App/frontend/**/*.json": "yarn --cwd src/App/frontend eslint --cache --fix",
+    "src/App/frontend/**/*.{css,md}": "prettier -w",
     "*{js,jsx,tsx,ts,css,md}": "prettier -w",
     "./src/Designer/frontend/language/src/*.json": "yarn run sort-texts"
   },
