Fixing mistakes I've made when merging from main

--- a/src/Runtime/localtest/loadbalancer/templates/nginx.conf.conf
+++ b/src/Runtime/localtest/loadbalancer/templates/nginx.conf.conf
@@ -90,7 +90,7 @@ http {
         location / {
             #Support using Local js, when a cookie value is set
             subs_filter_types text/html;
-            proxy_pass          http://app/;
+            proxy_pass          http://localtest/;
             error_page 502 /502App.html;
             proxy_cookie_domain altinn3local.no local.altinn.cloud;
         }
