--- a/renovate.json
+++ b/renovate.json
@@ -29,6 +29,11 @@
       "commitMessageSuffix": " (localtest)"
     },
     {
+      "matchFileNames": ["src/Runtime/pdf3/**"],
+      "additionalBranchPrefix": "pdf3/",
+      "commitMessageSuffix": " (pdf3)"
+    },
+    {
       "matchFileNames": ["src/App/**"],
       "matchPackageNames": [
         "@digdir/designsystemet-react",
@@ -90,6 +95,5 @@
       ],
       "versioningTemplate": "semver"
     }
-  ],
-  "schedule": ["before 07:00 on Monday"]
+  ]
 }
