--- a/.github/workflows/app-frontend-lighthouse-ci.yml
+++ b/.github/workflows/app-frontend-lighthouse-ci.yml
@@ -20,11 +20,15 @@ jobs:
         with:
           dotnet-version: '8.0.x'
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+
       - name: Installing Frontend Dependencies
         uses: ./.github/actions/yarn-install
         with:
           working-directory: src/App/frontend
-          node-version: '20.x'
 
       - name: Build localtest
         working-directory: src/Runtime/localtest
