--- a/src/App/frontend/package.json
+++ b/src/App/frontend/package.json
@@ -28,7 +28,8 @@
     "tsc:watch": "yarn gen && tsc --watch",
     "tsc:watch:cypress": "yarn gen && tsc --watch --project test/tsconfig.json",
     "lint": "yarn gen && eslint .",
-    "bench": "tsx --expose_gc --tsconfig benchmarks/tsconfig.json benchmarks/${0}"
+    "bench": "tsx --expose_gc --tsconfig benchmarks/tsconfig.json benchmarks/${0}",
+    "lhci": "lhci autorun"
   },
   "devDependencies": {
     "@babel/core": "7.28.5",
@@ -39,6 +40,7 @@
     "@babel/runtime-corejs3": "7.28.4",
     "@eslint/compat": "1.4.1",
     "@faker-js/faker": "10.1.0",
+    "@lhci/cli": "^0.15.1",
     "@percy/cli": "1.31.4",
     "@percy/cypress": "3.1.6",
     "@pmmmwh/react-refresh-webpack-plugin": "0.6.1",
@@ -111,6 +113,7 @@
     "mime": "4.1.0",
     "mini-css-extract-plugin": "2.9.4",
     "prettier": "3.6.2",
+    "puppeteer": "^24.29.0",
     "react-refresh": "0.18.0",
     "resize-observer-polyfill": "1.5.1",
     "source-map-loader": "5.0.0",
