--- a/.github/workflows/deploy-runtime-grafana-manifests.yaml
+++ b/.github/workflows/deploy-runtime-grafana-manifests.yaml
@@ -10,9 +10,9 @@ on:
   workflow_dispatch:
     inputs:
       rings:
-        description: 'Rings to tag the artifact with. Format of the input object is [{"ring": "at_ring1", "environment": "dev"}].'
+        description: 'Rings to tag the artifact with. Format of the input object is [{"ring": "tt_ring1", "environment": "runtime_tt_ring1"}].'
         required: false
-        default: '[{"ring": "at_ring1", "environment": "runtime_at_ring1"}]'
+        default: '[{"ring": "tt_ring1", "environment": "runtime_tt_ring1"}]'
 
 permissions:
   id-token: write
@@ -26,7 +26,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       default-rings: >-
-        [{"ring": "at_ring1", "environment": "runtime_at_ring1"},{"ring": "at_ring2", "environment": "runtime_at_ring2"},{"ring": "tt_ring1", "environment": "runtime_tt_ring1"},{"ring": "tt_ring2", "environment": "runtime_tt_ring2"},{"ring": "prod_ring1", "environment": "runtime_prod_ring1"},{"ring": "prod_ring2", "environment": "runtime_prod_ring2"}]
+        [{"ring": "tt_ring1", "environment": "runtime_tt_ring1"},{"ring": "tt_ring2", "environment": "runtime_tt_ring2"},{"ring": "prod_ring1", "environment": "runtime_prod_ring1"},{"ring": "prod_ring2", "environment": "runtime_prod_ring2"}]
     outputs:
       ringsjson: ${{ steps.construct-rings.outputs.ringsjson }}
     steps:
