adds running wf on wf changes

--- a/.github/workflows/app-frontend-lighthouse-ci.yml
+++ b/.github/workflows/app-frontend-lighthouse-ci.yml
@@ -5,9 +5,11 @@ on:
       - 'main'
     paths:
       - 'src/App/frontend/**'
+      - '.github/workflows/app-frontend-lighthouse-ci.yml'
   pull_request:
     paths:
       - 'src/App/frontend/**'
+      - '.github/workflows/app-frontend-lighthouse-ci.yml'
 jobs:
   lighthouse:
     name: Lighthouse CI
