--- a/.github/workflows/label-and-auto-approve-pr.yaml
+++ b/.github/workflows/label-and-auto-approve-pr.yaml
@@ -11,6 +11,9 @@ permissions:
 jobs:
   label-and-approve:
     runs-on: ubuntu-latest
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.event.pull_request.number }}
+      cancel-in-progress: true
     steps:
       - name: Label PR based on changed files
         uses: actions/labeler@8558fd74291d67161a8a78ce36a881fa63b766a9 # v5
