make sure exit code of lhci is respected, not just tee

--- a/.github/workflows/app-frontend-lighthouse-ci.yml
+++ b/.github/workflows/app-frontend-lighthouse-ci.yml
@@ -95,6 +95,7 @@ jobs:
         working-directory: src/App/frontend
         run: |
           set -e # exit on any failure
+          set -o pipefail # preserve exit codes in pipes
           yarn run lhci 2>&1 | tee lighthouse_output.txt
 
           # Extract the report URL
