--- a/infra/runtime/grafana-manifests/contact-points/altinn-studio-gateway.yaml
+++ b/infra/runtime/grafana-manifests/contact-points/altinn-studio-gateway.yaml
@@ -2,8 +2,8 @@ apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaContactPoint
 metadata:
   name: external-grafana-altinn-studio-gateway
-  namespace: grafana
 spec:
+  allowCrossNamespaceImport: true
   name: altinn-studio-gateway
   type: webhook
   instanceSelector:
