--- a/infra/runtime/grafana-manifests/notification-policies/altinn.yaml
+++ b/infra/runtime/grafana-manifests/notification-policies/altinn.yaml
@@ -2,8 +2,8 @@ apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaNotificationPolicy
 metadata:
   name: external-grafana-altinn
-  namespace: grafana
 spec:
+  allowCrossNamespaceImport: true
   instanceSelector:
     matchLabels:
       dashboards: external-grafana
