Claude experiment, trying to parse out rules and generate expressions

--- a/src/cli/src/altinn-studio-cli/altinn-studio-cli.csproj
+++ b/src/cli/src/altinn-studio-cli/altinn-studio-cli.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Jint" />
     <PackageReference Include="Microsoft.Build.Locator" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" />
     <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" />
