use main branch for trigger

--- a/.github/workflows/deploy-studio-syncroot.yaml
+++ b/.github/workflows/deploy-studio-syncroot.yaml
@@ -3,7 +3,7 @@ name: Infra - deploy studio syncroot
 on:
   push:
     branches:
-      - feat/studio-syncroot
+      - main
     paths:
       - infra/studio/syncroot/**
       - .github/workflows/deploy-studio-syncroot.yaml
