--- a/infra/studio/syncroot/base/gitea-runners.yaml
+++ b/infra/studio/syncroot/base/gitea-runners.yaml
@@ -2,7 +2,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: OCIRepository
 metadata:
   name: gitea-runners
-  namespace: studio-runners
+  namespace: default
 spec:
   interval: 5m
   url: oci://altinntjenestercontainerregistry.azurecr.io/configs/gitea-runners-${ENVIRONMENT}
@@ -12,14 +12,14 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: gitea-runners
-  namespace: studio-runners
+  namespace: default
 spec:
   interval: 5m
   targetNamespace: studio-runners
   sourceRef:
     kind: OCIRepository
     name: gitea-runners
-    namespace: studio-runners
+    namespace: default
   path: ./
   prune: true
   timeout: 1m
