--- a/.github/workflows/deploy-studio-syncroot.yaml
+++ b/.github/workflows/deploy-studio-syncroot.yaml
@@ -3,7 +3,7 @@ name: Deploy studio syncroot
 on:
   push:
     branches:
-      - feat/studio-syncroot
+      - main
     paths:
       - infra/studio/syncroot/**
       - .github/workflows/deploy-studio-syncroot.yaml
@@ -25,7 +25,7 @@ jobs:
   construct-environments-array:
     uses: ./.github/workflows/template-construct-environments.yaml
     with:
-      environments: ${{ github.event.inputs.environments || 'staging' }}
+      environments: ${{ github.event.inputs.environments || 'dev,staging,prod' }}
 
   push-syncroot-artifact:
     name: Push syncroot as OCI artifact
