--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 
 # Azure OpenAI Configuration (Preferred)
 AZURE_API_KEY=your_azure_api_key_here
-AZURE_ENDPOINT=https://your-resource.openai.azure.com/
+# AZURE_ENDPOINT=https://your-resource.openai.azure.com/
 AZURE_API_VERSION=2024-12-01-preview
 AZURE_DEPLOYMENT_NAME=gpt-4o-mini-2M-tps
 
@@ -33,13 +33,28 @@ OPENAI_API_KEY=your_openai_api_key_here
 LLM_MODEL=gpt-4o-mini
 LLM_TEMPERATURE=0.1
 
+# Docker mode flag - set to true when running in Docker container, false for local development
+# RUNNING_IN_DOCKER=true  # For Docker
+RUNNING_IN_DOCKER=false  # For Local
+
 # Altinn Studio Integration
-ALTINN_STUDIO_APPS_PATH=/Users/yourname/Apps
-GITEA_API_TOKEN=your_gitea_token_here
-GITEA_URL=https://altinn.studio/repos/api/v1
+# ALTINN_STUDIO_APPS_PATH=/Users/yourname/Apps
+# GITEA_API_TOKEN=your_gitea_token_here
+
+# Gitea Configuration
+# For Docker: use host.docker.internal to access host machine services
+# For Local: use studio.localhost or localhost:3000 for local Gitea
+# GITEA_URL=http://host.docker.internal:3000/api/v1  # For Docker
+GITEA_URL=http://studio.localhost:3000/api/v1  # For Local
+# GITEA_BASE_URL=http://host.docker.internal:3000  # For Docker
+GITEA_BASE_URL=http://studio.localhost:3000  # For Local
+GITEA_LOCAL_TOKEN=your_gitea_token_here
 
 # MCP Server
-MCP_SERVER_URL=http://localhost:8069/sse
+# For Docker: use host.docker.internal to access host machine
+# For Local: use localhost:8069 for local MCP server
+# MCP_SERVER_URL=http://host.docker.internal:8069/sse  # For Docker
+MCP_SERVER_URL=http://localhost:8069/sse  # For Local
 MCP_SERVER_EXPECTED_VERSION=1.0.0  # Optional: exact version to require
 
 # MLflow Tracking
