--- a/src/AI/mcp/.env.example
+++ b/src/AI/mcp/.env.example
@@ -2,5 +2,6 @@
 AZURE_API_KEY=your_azure_api_key_here
 OPENAI_API_KEY=your_openai_api_key_here # OPTIONAL: Azure is used by default.
 
-# Gitea Access Token
+# Gitea Configuration
+GITEA_URL=https://altinn.studio/repos/api/v1
 GITEA_API_KEY=your_gitea_api_key_here
