--- a/charts/altinn-loadbalancer/templates/configmap.yaml
+++ b/charts/altinn-loadbalancer/templates/configmap.yaml
@@ -30,6 +30,10 @@ data:
         server kuberneteswrapper:3000;
       }
 
+      upstream mcp {
+        server altinn-mcp-server;
+      }
+
       map $uri $spa_path {
         ~^/(dashboard|editor|preview|admin|resourceadm|info)(/.*)?$ $1;
         default                                               none;
@@ -106,6 +110,16 @@ data:
           proxy_pass         	http://kwlocation/;
           proxy_set_header 	  Host {{ $host }};
           proxy_set_header 	  X-Forwarded-For $remote_addr;
+        }
+
+        location /mcp/ {
+          proxy_pass         	http://mcp/;
+          proxy_set_header 	  Host {{ $host }};
+          proxy_set_header 	  X-Forwarded-For $remote_addr;
+          proxy_set_header    X-Forwarded-Proto $scheme;
+          proxy_http_version  1.1;
+          proxy_buffering     off;
+          proxy_cache         off;
         }
 
         location ~ ^/(dashboard|editor|preview|admin|resourceadm|info)/assets(/.*)?$ {
