--- a/charts/altinn-loadbalancer/templates/configmap.yaml
+++ b/charts/altinn-loadbalancer/templates/configmap.yaml
@@ -112,8 +112,20 @@ data:
           proxy_set_header 	  X-Forwarded-For $remote_addr;
         }
 
-        location /mcp/ {
-          proxy_pass         	http://mcp/;
+        location /sse {
+          proxy_pass         	http://mcp/sse;
+          proxy_set_header 	  Host {{ $host }};
+          proxy_set_header 	  X-Forwarded-For $remote_addr;
+          proxy_set_header    X-Forwarded-Proto $scheme;
+          proxy_http_version  1.1;
+          proxy_buffering     off;
+          proxy_cache         off;
+          proxy_read_timeout  86400;
+          chunked_transfer_encoding off;
+        }
+
+        location /messages {
+          proxy_pass         	http://mcp/messages;
           proxy_set_header 	  Host {{ $host }};
           proxy_set_header 	  X-Forwarded-For $remote_addr;
           proxy_set_header    X-Forwarded-Proto $scheme;
