Fix folder references

--- a/infra/runtime/grafana-manifests/alert-rules/altinn-apps.yaml
+++ b/infra/runtime/grafana-manifests/alert-rules/altinn-apps.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   allowCrossNamespaceImport: true
   name: Exceptions
-  folderRef: external-grafana-altinn
+  folder: Altinn
   instanceSelector:
     matchLabels:
       dashboards: external-grafana
