--- a/infra/runtime/grafana-manifests/dashboards/altinn-apps.yaml
+++ b/infra/runtime/grafana-manifests/dashboards/altinn-apps.yaml
@@ -4,7 +4,7 @@ metadata:
   name: external-grafana-altinn-apps
 spec:
   allowCrossNamespaceImport: true
-  folderRef: external-grafana-altinn
+  folder: Altinn
   instanceSelector:
     matchLabels:
       dashboards: external-grafana
