--- a/src/AI/mcp/pyproject.toml
+++ b/src/AI/mcp/pyproject.toml
@@ -42,6 +42,7 @@ dependencies = [
     "numpy>=1.25.0",
     "langgraph",
     "langwatch",
+    "langfuse>=2.0.0",
     "jsonschema",
     "langchain-community",
     "scikit-learn>=1.3.0",
