--- a/src/AI/mcp/pyproject.toml
+++ b/src/AI/mcp/pyproject.toml
@@ -47,6 +47,7 @@ dependencies = [
     "langchain-community",
     "scikit-learn>=1.3.0",
     "beautifulsoup4>=4.12.0",
+    "defusedxml>=0.7.1",
 ]
 
 [build-system]
