--- a/.github/workflows/app-frontend-lighthouse-ci.yml
+++ b/.github/workflows/app-frontend-lighthouse-ci.yml
@@ -5,9 +5,12 @@ on:
       - 'main'
     paths:
       - 'src/App/frontend/**'
+      - '.github/workflows/app-frontend-lighthouse-ci.yml'
   pull_request:
     paths:
       - 'src/App/frontend/**'
+      - '.github/workflows/app-frontend-lighthouse-ci.yml'
+  workflow_dispatch:
 jobs:
   lighthouse:
     name: Lighthouse CI
@@ -92,8 +95,8 @@ jobs:
         working-directory: src/App/frontend
         run: |
           set -e # exit on any failure
-          yarn run lhci > lighthouse_output.txt 2>&1
-          cat lighthouse_output.txt
+          set -o pipefail # preserve exit codes in pipes
+          yarn run lhci 2>&1 | tee lighthouse_output.txt
 
           # Extract the report URL
           REPORT_URL=$(grep -o 'https://storage.googleapis.com/lighthouse-infrastructure.appspot.com/reports/[^[:space:]]*' lighthouse_output.txt || echo "")
