--- a/src/Runtime/StudioGateway/src/StudioGateway.Api/StudioGateway.Api.csproj
+++ b/src/Runtime/StudioGateway/src/StudioGateway.Api/StudioGateway.Api.csproj
@@ -10,6 +10,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Identity" />
+    <PackageReference Include="Azure.Monitor.Query" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
   </ItemGroup>
 
