--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,7 @@
   "extends": ["local>Altinn/renovate-config", ":prHourlyLimit4"],
   "separateMinorPatch": true,
   "separateMultipleMajor": true,
+  "prCreation": "not-pending",
   "packageRules": [
     {
       "groupName": "LibGit2Sharp dependency",
