create separate .env configs for local and docker

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
 # Environment Configuration Example
-# Copy this to .env and fill in your values
+#
+# For local development:
+#   Copy this file to .env and use the local configuration values below
+#
+# For Docker deployment:
+#   Copy this file to .env.docker and use the Docker configuration values below
 
 # Azure OpenAI Configuration (Preferred)
 AZURE_API_KEY=your_azure_api_key_here
@@ -33,29 +38,27 @@ OPENAI_API_KEY=your_openai_api_key_here
 LLM_MODEL=gpt-4o-mini
 LLM_TEMPERATURE=0.1
 
-# Docker mode flag - set to true when running in Docker container, false for local development
-# RUNNING_IN_DOCKER=true  # For Docker
-RUNNING_IN_DOCKER=false  # For Local
-
 # Altinn Studio Integration
 # ALTINN_STUDIO_APPS_PATH=/Users/yourname/Apps
 # GITEA_API_TOKEN=your_gitea_token_here
 
 # Gitea Configuration
-# For Docker: use host.docker.internal to access host machine services
-# For Local: use studio.localhost or localhost:3000 for local Gitea
-# GITEA_URL=http://host.docker.internal:3000/api/v1  # For Docker
-GITEA_URL=http://studio.localhost:3000/api/v1  # For Local
-# GITEA_BASE_URL=http://host.docker.internal:3000  # For Docker
-GITEA_BASE_URL=http://studio.localhost:3000  # For Local
+# For local development (use studio.localhost or localhost:3000):
+# For Docker deployment (use host.docker.internal to access host machine):
+GITEA_URL=http://studio.localhost:3000/api/v1
+GITEA_BASE_URL=http://studio.localhost:3000
 GITEA_LOCAL_TOKEN=your_gitea_token_here
+# GITEA_URL=http://host.docker.internal:3000/api/v1
+# GITEA_BASE_URL=http://host.docker.internal:3000
+# GITEA_LOCAL_TOKEN=your_gitea_token_here
 
-# MCP Server
-# For Docker: use host.docker.internal to access host machine
-# For Local: use localhost:8069 for local MCP server
-# MCP_SERVER_URL=http://host.docker.internal:8069/sse  # For Docker
-MCP_SERVER_URL=http://localhost:8069/sse  # For Local
-MCP_SERVER_EXPECTED_VERSION=1.0.0  # Optional: exact version to require
+# MCP Server Configuration
+# For local development (use localhost:8069):
+# For Docker deployment (use host.docker.internal to access host machine):
+MCP_SERVER_URL=http://localhost:8069/sse
+MCP_SERVER_EXPECTED_VERSION=1.0.0
+# MCP_SERVER_URL=http://host.docker.internal:8069/sse
+# MCP_SERVER_EXPECTED_VERSION=1.0.0
 
 # MLflow Tracking
 MLFLOW_ENABLED=true
