--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@
 
 # Azure OpenAI Configuration (Preferred)
 AZURE_API_KEY=your_azure_api_key_here
-# AZURE_ENDPOINT=https://your-resource.openai.azure.com/
+AZURE_ENDPOINT=https://your-resource.openai.azure.com/
 AZURE_API_VERSION=2024-12-01-preview
 AZURE_DEPLOYMENT_NAME=gpt-4o-mini-2M-tps
 
@@ -39,26 +39,21 @@ LLM_MODEL=gpt-4o-mini
 LLM_TEMPERATURE=0.1
 
 # Altinn Studio Integration
-# ALTINN_STUDIO_APPS_PATH=/Users/yourname/Apps
-# GITEA_API_TOKEN=your_gitea_token_here
+ALTINN_STUDIO_APPS_PATH=/Users/yourname/Apps
+GITEA_API_TOKEN=your_gitea_token_here
 
 # Gitea Configuration
-# For local development (use studio.localhost or localhost:3000):
-# For Docker deployment (use host.docker.internal to access host machine):
-GITEA_URL=http://studio.localhost:3000/api/v1
-GITEA_BASE_URL=http://studio.localhost:3000
+# For local development, use studio.localhost or localhost:3000.
+# For Docker deployment, use host.docker.internal to access host machine.
+GITEA_URL=http://studio.localhost:3000/api/v1 # or http://host.docker.internal:3000/api/v1
+GITEA_BASE_URL=http://studio.localhost:3000 # or http://host.docker.internal:3000
 GITEA_LOCAL_TOKEN=your_gitea_token_here
-# GITEA_URL=http://host.docker.internal:3000/api/v1
-# GITEA_BASE_URL=http://host.docker.internal:3000
-# GITEA_LOCAL_TOKEN=your_gitea_token_here
 
 # MCP Server Configuration
-# For local development (use localhost:8069):
-# For Docker deployment (use host.docker.internal to access host machine):
-MCP_SERVER_URL=http://localhost:8069/sse
+# For local MCP, use localhost:8069.
+# For Docker MCP, use host.docker.internal to access host machine.
+MCP_SERVER_URL=http://localhost:8069/sse # or http://host.docker.internal:8069/sse
 MCP_SERVER_EXPECTED_VERSION=1.0.0
-# MCP_SERVER_URL=http://host.docker.internal:8069/sse
-# MCP_SERVER_EXPECTED_VERSION=1.0.0
 
 # MLflow Tracking
 MLFLOW_ENABLED=true
