Revert namespaces : folder does not exist in rules and folderRef does not support cross-namespace

--- a/infra/runtime/grafana-manifests/alert-rules/altinn-apps.yaml
+++ b/infra/runtime/grafana-manifests/alert-rules/altinn-apps.yaml
@@ -2,10 +2,11 @@ apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaAlertRuleGroup
 metadata:
   name: external-grafana-altinn-apps
+  namespace: grafana
 spec:
   allowCrossNamespaceImport: true
   name: Exceptions
-  folder: Altinn
+  folderRef: external-grafana-altinn
   instanceSelector:
     matchLabels:
       dashboards: external-grafana
