--- a/infra/runtime/grafana-manifests/contact-points/altinn-slack.yaml
+++ b/infra/runtime/grafana-manifests/contact-points/altinn-slack.yaml
@@ -2,6 +2,7 @@ apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaContactPoint
 metadata:
   name: external-grafana-altinn-slack
+  namespace: grafana
 spec:
   allowCrossNamespaceImport: true
   name: altinn-slack
