extracts instance creation js to own file

--- a/src/App/backend/src/Altinn.App.Api/Altinn.App.Api.csproj
+++ b/src/App/backend/src/Altinn.App.Api/Altinn.App.Api.csproj
@@ -58,6 +58,10 @@
   </Target>
 
   <ItemGroup>
+    <EmbeddedResource Include="Scripts\instance-creation.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <InternalsVisibleTo Include="$(AssemblyName).Tests" />
     <InternalsVisibleTo Include="Altinn.App.Benchmarks" />
     <InternalsVisibleTo Include="Altinn.App.Tests.Common" />
