--- a/src/Runtime/operator/config/local-minimal/localtestapp.yaml
+++ b/src/Runtime/operator/config/local-minimal/localtestapp.yaml
@@ -37,7 +37,7 @@ spec:
     ipv6:
       enabled: false
     linkerd:
-      enabled: false
+      enabled: true
     volumeMounts: []
     volumes: []
     ingressRoute:
