--- a/src/Runtime/operator/config/manager/kustomization.yaml
+++ b/src/Runtime/operator/config/manager/kustomization.yaml
@@ -2,7 +2,14 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - manager.yaml
-images:
-- name: controller
-  newName: runtime-operator-controller
-  newTag: latest
+replacements:
+- source:
+    kind: Deployment
+    name: controller-manager
+    fieldPath: metadata.annotations.[altinn.studio/image]
+  targets:
+  - select:
+      kind: Deployment
+      name: controller-manager
+    fieldPaths:
+      - spec.template.spec.containers.[name=manager].image
